# bustsuri

./: .gitignore  Cargo.toml  notes.txt  readme.md
examples/: collision.rs  drag.rs  gravity.rs  player_input.rs  polygon.rs
src/: collision.rs  kinematic.rs  lib.rs  rigid_body.rs
src/collision/: collider.rs  mod.rs
src/collision/shape/: aabb.rs  circle.rs  point.rs  polygon.rs
